<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/admin_background"
    android:orientation="vertical"
    android:padding="@dimen/screen_padding">

    <TextView
        android:id="@+id/tvAutostartTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_autostart_title"
        android:textColor="@color/admin_text_primary"
        android:textSize="@dimen/title_text"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvAutostartDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/onboarding_autostart_description"
        android:textColor="@color/admin_text_secondary"
        android:textSize="@dimen/body_text" />

    <Button
        android:id="@+id/btnAutostartEnable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_admin_button"
        app:backgroundTint="@null"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:nextFocusUp="@id/btnAutostartEnable"
        android:nextFocusDown="@id/btnAutostartBack"
        android:nextFocusLeft="@id/btnAutostartEnable"
        android:nextFocusRight="@id/btnAutostartEnable"
        android:paddingHorizontal="28dp"
        android:paddingVertical="10dp"
        android:stateListAnimator="@null"
        android:text="@string/onboarding_autostart_enable"
        android:textColor="@color/white"
        android:textSize="@dimen/body_text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAutostartBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_admin_button"
            app:backgroundTint="@null"
            android:focusable="true"
            android:focusableInTouchMode="false"
            android:nextFocusLeft="@id/btnAutostartBack"
            android:nextFocusRight="@id/btnAutostartSkip"
            android:nextFocusUp="@id/btnAutostartEnable"
            android:nextFocusDown="@id/btnAutostartBack"
            android:paddingHorizontal="24dp"
            android:paddingVertical="10dp"
            android:stateListAnimator="@null"
            android:text="@string/onboarding_back"
            android:textColor="@color/white"
            android:textSize="@dimen/body_text" />

        <Button
            android:id="@+id/btnAutostartSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/bg_admin_button"
            app:backgroundTint="@null"
            android:focusable="true"
            android:focusableInTouchMode="false"
            android:nextFocusLeft="@id/btnAutostartBack"
            android:nextFocusRight="@id/btnAutostartSkip"
            android:nextFocusUp="@id/btnAutostartEnable"
            android:nextFocusDown="@id/btnAutostartSkip"
            android:paddingHorizontal="24dp"
            android:paddingVertical="10dp"
            android:stateListAnimator="@null"
            android:text="@string/onboarding_skip"
            android:textColor="@color/white"
            android:textSize="@dimen/body_text" />
    </LinearLayout>
</LinearLayout>